*fix arrow bug on mobile devices

--- a/less/doc.less
+++ b/less/doc.less
@@ -84,7 +84,8 @@
             font-weight: bolder;
             position: relative;
             &::after {
-              content: '\25be';
+              font-family: "Icons";
+              content: '\f3d0';
               top: -5px;
               position: absolute;
               right: 0;
@@ -99,8 +100,8 @@
               text-decoration: none;
             }
           }
-          &.open > a > span:after {
-            content: '\25b4';
+          &.active > a > span::after {
+            content: '\f3d8';
           }
           ul {
             background-color: #FAFAFA;
